# Hydrax

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy_docs.yml  run_tests.yml
citation/: index.html
docs/: .citation.md  .htaccess  index.md  requirements.txt
search/: search_index.json
src/hydrax/: __init__.py  core.py  jax_filters.py  loss.py  sampling.py  unbatching.py
src/hydrax/example/: cifar10.py  custom_nn.py
src/hydrax/nn/: nonlinear.py  utils.py
tests/: placeholder_test.py
